# university-courses-notes-practices

./: .gitignore
discrete-math/: print_set_permutations.py  variations.py
dsa1/homeworks/find_second_largest_in_h1l/: solution.py
dsa1/homeworks/kadane-algorithm/: index.py
dsa1/homeworks/legendre-alg/: analysis.md
dsa1/lab1/: bubble_sort.cpp  selection_sort.cpp
dsa1/practices/bubble_sort/: bubble_sort1.py  bubble_sort2.py  insertion_sort1.py
dsa1/practices/midterm/: infix_postfix.md  postfix.py  singly_linked_list.c
functional/univ-projects/: Lab9_questions.hs  PT4.hs  extra_pt.hs  pt.hs
functional/univ-projects/lab11/: lab11.hs
imperative/: .gitignore
imperative/projects/math_operation/: CMakeLists.txt  arithmetic.cpp  main.py
oop1/: Student.drawio  parking_lot_management.drawio  small-assignment.drawio
oop1/assignments/big_assignment/: assignment.tex  classes.puml  use-case-diagram.puml
oop1/assignments/big_assignment1/: assignment.tex
oop1/assignments/big_assignment2/: assignment.tex
oop1/lab1/: Main.java  beachballs.java
oop1/lab2/: Point.java  Rectangle.java
programming-languages/homework12/: en-exam-24-25-1-JawaMarket.html  en-exam-24-25-1-JawaMarket.md
programming-languages/lab1/: labs_en.html  notes.md
programming-languages/lab2/: Circle.java  Complex.java  Distance.java  Point.java
programming-languages/lecture2/: notes.md
programming-languages/relationship/: notes.md
web-programming/: practice1.md
webdev/: index.html
webdev/bestmovies_2023_start_v20250303/: form.html  index.html
webdev/ziyadatbank/: index.html
(+262 files in other folders)
